--- a/SENAI.SP.MEDICAL/SENAI.SP.MEDICAL/SENAI.SP.MEDICAL.csproj
+++ b/SENAI.SP.MEDICAL/SENAI.SP.MEDICAL/SENAI.SP.MEDICAL.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contexts\" />
+  </ItemGroup>
+
 	<PropertyGroup>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<NoWarn>$(NoWarn);1591</NoWarn>
